@@ -1,3 +1,7 @@
+# Adds the Sequel::Migration and Sequel::Migrator classes, which allow
+# the user to easily group schema changes and migrate the database
+# to a newer version or revert to a previous version.
+
 module Sequel
   # The Migration class describes a database migration that can be reversed.
   # The migration looks very similar to ActiveRecord (Rails) migrations, e.g.:
@@ -127,6 +131,8 @@ module Sequel
   #
   #   Sequel::Migrator.apply(DB, '.', 5, 1)
   module Migrator
+    DEFAULT_SCHEMA_COLUMN = :version
+    DEFAULT_SCHEMA_TABLE = :schema_info
     MIGRATION_FILE_PATTERN = /\A\d+_.+\.rb\z/.freeze
     MIGRATION_SPLITTER = '_'.freeze
 
@@ -135,30 +141,22 @@ module Sequel
       run(db, directory, :target => target, :current => current)
     end
 
-    # Migrates the supplied database in the specified directory from the
-    # current version to the target version. If no current version is
-    # supplied, it is extracted from a schema_info table. The schema_info
-    # table is automatically created and maintained by this method.
+    # Migrates the supplied database using the migration files in the the specified directory. Options:
+    # * :column - The column in the :table argument storing the migration version (default: :version).
+    # * :current - The current version of the database.  If not given, it is retrieved from the database
+    #   using the :table and :column options.
+    # * :table - The table containing the schema version (default: :schema_info).
+    # * :target - The target version to which to migrate.  If not given, migrates to the maximum version.
     #
-    # Example: 
-    #   Sequel::Migrator.run(DB, :path => "app1/migrations", :column => :app1_version)
-    #   Sequel::Migrator.run(DB, :path => "app2/migrations", :column => :app2_version)
-    #
-    # Useful when you have multple app versions of migrations trees which use one DB such as
-    # /app1/migrations/001_app1_tables.rb
-    # /app1/migrations/002_app1_constraints.rb
-    #
-    # /app2/migrations/001_app2_tables.rb
-    # /app2/migrations/002_app2_constraints.rb
-    def self.run(db, directory, opts = {:target => nil, :current => nil, :table => :schema_info, :column => :version})
-      opts[:column] ||= :version
-      opts[:table] ||= :schema_info
-      raise "Must supply a valid migration path" unless directory and File.directory?(directory)
-      # determine current and target version and direction
-      current = opts[:current] || get_current_migration_version(db, :table => opts[:table], :column => opts[:column])
-      target  = opts[:target]  || latest_migration_version(directory)
-      raise Error, "No current version available" if current.nil?
-      raise Error, "No target version available" if target.nil?
+    # Examples: 
+    #   Sequel::Migrator.run(DB, "migrations")
+    #   Sequel::Migrator.run(DB, "migrations", :target=>15, :current=>10)
+    #   Sequel::Migrator.run(DB, "app1/migrations", :column=> :app2_version)
+    #   Sequel::Migrator.run(DB, "app2/migrations", :column => :app2_version, :table=>:schema_info2)
+    def self.run(db, directory, opts={})
+      raise(Error, "Must supply a valid migration path") unless directory and File.directory?(directory)
+      raise(Error, "No current version available") unless current = opts[:current] || get_current_migration_version(db, opts)
+      raise(Error, "No target version available") unless target  = opts[:target]  || latest_migration_version(directory)
 
       direction = current < target ? :up : :down
       
@@ -166,7 +164,7 @@ module Sequel
 
       db.transaction do
         classes.each {|c| c.apply(db, direction)}
-        set_current_migration_version(db, target, :table => opts[:table], :column => opts[:column])
+        set_current_migration_version(db, target, opts)
       end
       
       target
@@ -174,11 +172,8 @@ module Sequel
 
     # Gets the current migration version stored in the database. If no version
     # number is stored, 0 is returned.
-    def self.get_current_migration_version(db, opts = {:column => :version, :table => :schema_info})
-      opts[:column] ||= :version
-      opts[:table]  ||= :schema_info
-      r = schema_info_dataset(db, opts).first
-      r ? (r[opts[:column]] || 0) : 0
+    def self.get_current_migration_version(db, opts={})
+      (schema_info_dataset(db, opts).first || {})[opts[:column] || DEFAULT_SCHEMA_COLUMN] || 0
     end
 
     # Returns the latest version available in the specified directory.
@@ -220,33 +215,23 @@ module Sequel
     
     # Returns the dataset for the schema_info table. If no such table
     # exists, it is automatically created.
-    def self.schema_info_dataset(db, opts = {:column => :version, :table => :schema_info})
-      column = opts[:column] || :version
-      table  = opts[:table]  || :schema_info
-      if column == :version
-        db.create_table(table) {integer :version} unless db.table_exists?(table)
-      else
-        if db.table_exists?(table)
-          db.alter_table(table) do
-            add_column column, Integer
-          end unless db[table].columns.include?(column)
-        else
-          db.create_table(table) {integer :version; integer column}
-        end
-      end
-      db[table]
+    def self.schema_info_dataset(db, opts={})
+      column = opts[:column] || DEFAULT_SCHEMA_COLUMN
+      table  = opts[:table]  || DEFAULT_SCHEMA_TABLE
+      db.create_table?(table){Integer column}
+      db.alter_table(table){add_column column, Integer} unless db.from(table).columns.include?(column)
+      db.from(table)
     end
     
     # Sets the current migration  version stored in the database.
-    def self.set_current_migration_version(db, version, opts = {:column => :version, :table => :schema_info})
-      opts[:column] ||= :version
-      opts[:table]  ||= :schema_info
+    def self.set_current_migration_version(db, version, opts={})
+      column = opts[:column] || DEFAULT_SCHEMA_COLUMN
       dataset = schema_info_dataset(db, opts)
-      dataset.send(dataset.first ? :update : :<<, opts[:column] => version)
+      dataset.send(dataset.first ? :update : :insert, column => version)
     end
 
     # Return the integer migration version based on the filename.
-    def self.migration_version_from_file(filename)
+    def self.migration_version_from_file(filename) # :nodoc:
       filename.split(MIGRATION_SPLITTER, 2).first.to_i
     end
     private_class_method :migration_version_from_file
